Proposal cloned in Thesis

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -1,7 +1,11 @@
+% !TEX root=ProposalJavier.tex 
+% the previous is to reference main .bib
 %% CHAPTER
 \appendix
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
-\section{WV-2 Sensor Characteristics}
+\section{Lab Measurements}
+\section{Field Measurements}
+\section{Landsat-8 Sensor Characteristics}
 \section{HydroLight Specification}
 \section{MODTRAN Specification}
