--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,3 +1,15 @@
+% !TEX root=ProposalJavier.tex 
+% the previous is to reference main .bib
 %% CHAPTER
 \chapter{Introduction}
-\pagenumbering{arabic}
+\label{ch:introduction} 
+\pagenumbering{arabic} 
+The Landsat satellites' main mission is to image the land areas of the earth and therefore there are typically no open ocean (case 1 water) images available. This is the reason why Landsat satellites have been underestimated by the ocean color community for the study of water bodies. In addition, the Landsat instruments have generally had broad bands and low SNR when compared to ocean color satellites such as SeaWiFS and MODIS. However, Landsat-8 could fulfill a niche in the ocean community for coastal and in-land water  body studies where a 1000 m pixel size is not suitable. This is where Landsat-8 has a valuable potential for water quality studies in more optically complex water bodies (Case 2 or high productive Case 1 waters). Therefore, the overall objective of this research is to demonstrate that the new generation of Landsat satellites are capable of accurately retrieving water constituents.
+
+The Landsat project has been monitoring the earth for over four decades, being the longest uninterrupted data set available. Landsat-8 is the new satellite that continues with this objective. Carrying two instruments onboard, the Operational Land Imager (OLI) and the Thermal InfraRed Scanner (TIRS), Landsat-8 is the first of a new generation of Landsat satellite with state-of-the-art technology. With its 12-bit quantization and improved signal-to-noise ratio (SNR), OLI is a big improvement to the Landsat mission. In addition, OLI includes a new coastal band that increased the spectral resolution of the instrument. These improvements are the main drivers to hypothesize that the Landsat-8 satellite will definitely have a better performance in water quality studies than its predecessors. 
+
+The retrieval of water components is in general performed in the reflectance domain, so the very first step in this work is to perform a high quality atmospheric correction to the radiance image from Landsat-8. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small when compared to the signal reaching the sensor produced by atmospheric scattering. Most of the atmospheric correction algorithms applied to Ocean Color satellites (e.g. SeaWiFS and MODIS) are not suitable for highly turbid coastal water \cite{Patt2003}. In this work, different approaches for atmospheric correction will be investigated. The first atmospheric correction algorithm investigated is an empirical line method-based (ELM-based) technique that uses a combination of an in-water radiative transfer model over water and a Landsat reflectance product to determine the bright and dark pixels in the image. The second one is the standard SeaWiFS/MODIS atmospheric correction algorithm that uses SWIR bands (\cite{Wang:2007}). The water-leaving reflectance values obtained after atmospheric correction are validated by comparison with water surface reflectance measured in situ. 
+
+After having corrected the image, the next step is to apply a retrieval algorithm that outputs water component retrieval maps of the main water components (chlorophyll, {\todo{or SM?} sediment} and colored dissolved organic matter (CDOM)). A spectral matching and look-up table (LUT) approach is utilized. It uses a least square error minimization algorithm to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model (\cite{Mobley:2005}). Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. The concentration values obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from water bodies present in the Landsat-8 image.
+
+In order to have outputs that are representative of the water bodies that are being studied, Inherent Optical Properties (IOPs) of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat-8 satellite passed over the area of study (Rochester, NY). After collection, these water samples were analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOPs results and in-situ AOPs measurements.
