--- a/Summary.tex
+++ b/Summary.tex
@@ -1,4 +1,13 @@
+% !TEX root=ProposalJavier.tex 
+% the previous is to reference main .bib
 %% CHAPTER
 \chapter{Summary and Recommendations}
 \section{Summary}
 \section{Future Work}
+\subsection{Hydrodynamics models} 
+The next step will be to use the validated results from the retrieval process for training hydrodynamics models to predict the future behavior of the water bodies. This would be based on previous work done by Pahlevan~{\it et al.} \cite{Pahlevan:2012b}, who used concentration maps obtained from the retrieval process using satellite imagery to train the ALGE hydrodynamic model. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to calibrate the hydrodynamic models.
+
+\subsection{Investigate New Sensor Enhancements for Future Missions}
+Water pixel spectra from a hyperspectral image (e.g. Hyperspectral Imager for the Coastal Ocean (HICO),  Airborne Visible/InfraRed Imaging Spectrometer (AVIRIS)) will be modified to simulate data similar to Landsat 8 but with the addition of a new NIR band. The retrieval process will be performed with these simulated data with and without the new NIR band in order to evaluate performance improvement. A similar analysis will be done to evaluate narrower spectral bandwidths available in Landsat 8 compared to those found in the MEdium Resolution Imaging Spectrometer (MERIS) and MODIS, for instance. 
+
+\section{Concluding Remarks}
