--- a/Results.tex
+++ b/Results.tex
@@ -1,8 +1,9 @@
-% !TEX root=ProposalJavier.tex 
+% !TEX root=Thesis_PhD.tex 
 % the previous is to reference main .bib
 %% CHAPTER
 \chapter{Initial Results}
 \label{ch:results}
+
 This chapter is separated in four sections. The first section explains the data collection process, giving some details in the kind of measurements taken in the field. Also, it includes a summary of the data collected at the moment of writing this document. The second section gives a brief description of the lab measurements. The atmospheric section shows preliminary results from the model-based ELM atmospheric correction method. Finally, the last section shows preliminary retrieval results over the area of study.
 % ------------------------------
 \section{Data Collection}
@@ -93,6 +94,617 @@ Comparisons between retrieved CPAs concentrations and field measurements are sho
     \caption{Comparison between measured and retrieved CDOM concentration.}
     \label{fig:cdomcomp} 
 \end{figure}  
+
+%% Added from SPIE San Diego paper on 07-28-15
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% -----------------------------------------------------------
+\begin{figure}[htbp!]
+  \centering
+  \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ROI_RocEmbayment130919}
+  \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+\end{figure}
+
+% -----------------------------------------------------------
+
+
+There were four different algorithms analyzed in this study. Three of them are based in the standard algorithms based on the methods developed by Gordon and Wang \cite{Gordon:1994}. The fourth algorithm is based on the algorithm developed by Concha and Schott\cite{Concha2014SPIE} and Gerace et al.\cite{Gerace:2012}.
+% -----------------------------------------------------------
+
+% \begin{figure}[htbp!]
+%   \centering
+%   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collated2013262_2_band_1_D.png}
+%   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+% \end{figure}
+
+% \begin{overpic}[width=0.5\textwidth,grid,tics=10]{pictures/baum}
+%  \put (20,85) {\huge$\displaystyle\gamma$}
+% \end{overpic}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 200 0 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443MOBdivpi}
+      \put (5,5) {MOB-ELM}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 200 0 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443ACO}
+      \put (5,5) {ACOLITE-SWIR}
+      \end{overpic}
+    \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 200 0 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443SEA}
+      \put (5,5) {SEADAS-SWIR}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=30 170 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_443_MUMM45}
+      \put (5,5) {MUMM}
+      \end{overpic}
+    \end{minipage}
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \vspace{0.5cm}
+      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+      \put (28,16) {$R_{rs}(443nm) [1/sr]$}
+      \end{overpic}
+    \end{minipage}
+
+  \caption{$R_{rs}$ 443.\label{fig:Rrs443} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 150 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_483_MOB}
+      \put (5,6) {MOB-ELM}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_483_ACO_R_R}
+      \put (5,5) {ACOLITE-SWIR}
+      \end{overpic}
+    \end{minipage}
+
+    \vspace{0.7cm}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_482_SEA5x5_R}
+      \put (5,5) {SEADAS-SWIR}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 150 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_482_MUMM45}
+      \put (5,5) {MUMM}
+      \end{overpic}
+    \end{minipage}
+    
+
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \vspace{0.5cm}
+      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+      \put (28,16) {$R_{rs}(482nm) [1/sr]$}
+      \end{overpic}
+    \end{minipage}
+
+  \caption{$R_{rs}$ 483.\label{fig:Rrs482} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 155 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_MOB}
+      \put (5,5) {MOB-ELM}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 150 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_ACO_R_R}
+      \put (5,5) {ACOLITE-SWIR}
+      \end{overpic}
+    \end{minipage}
+
+    \vspace{0.7cm}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 150 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_SEA5x5_R}
+      \put (5,5) {SEADAS-SWIR}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 150 40 150,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_MUMM45}
+      \put (5,5) {MUMM}
+      \end{overpic}
+    \end{minipage}
+    
+
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \vspace{0.5cm}
+      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+      \put (28,16) {$R_{rs}(561nm) [1/sr]$}
+      \end{overpic}
+    \end{minipage}
+
+  \caption{$R_{rs}$ 561.\label{fig:Rrs561} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_MOB}
+      \put (5,5) {MOB-ELM}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_ACO_R_R}
+      \put (5,5) {ACOLITE-SWIR}
+      \end{overpic}
+    \end{minipage}
+
+    \vspace{0.7cm}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_SEA5x5_R}
+      \put (5,5) {SEADAS-SWIR}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_MUMM45}
+      \put (5,5) {MUMM}
+      \end{overpic}
+    \end{minipage}
+    
+
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \vspace{0.5cm}
+      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+      \put (28,16) {$R_{rs}(655nm) [1/sr]$}
+      \end{overpic}
+    \end{minipage}
+
+  \caption{$R_{rs}$ 655.\label{fig:Rrs655} } 
+\end{figure}
+
+
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite_MUMM.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite_MUMM.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite_MUMM.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_MUMM.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_MUMM.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the ACOLITE tool (x) and the MUMM algorithm (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsAcolite_MUMM} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite_MoB-ELM.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite_MoB-ELM.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite_MoB-ELM.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_MoB-ELM.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the ACOLITE tool (x) and the MoB-ELM algorithm (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsAcolite_MoB-ELM} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite_SeaDAS.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite_SeaDAS.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite_SeaDAS.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_SeaDAS.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite_SeaDAS.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the ACOLITE tool (x) and the SeaDAS algorithm (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsAcolite_SeaDAS} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_MUMM_MoB-ELM.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_MUMM_MoB-ELM.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_MUMM_MoB-ELM.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_MUMM_MoB-ELM.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_MUMM_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the MUMM algorithm in SeaDAS (x) and the MoB-ELM algorithm (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsMUMM_MoB-ELM} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS_MUMM.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS_MUMM.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS_MUMM.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS_MUMM.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS_MUMM.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the SeaDAS tool (x) and the MUMM algorithm  in SeaDAS (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsSeaDAS_MUMM} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS_MoB-ELM.png}
+      \put (65,17) {\large A) $443nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS_MoB-ELM.png}
+      \put (65,17) {\large B) $483nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS_MoB-ELM.png}
+      \put (65,17) {\large C) $561nm$}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=250 310 250 0,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS_MoB-ELM.png}
+      \put (65,17) {\large D) $655nm$}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=70 50 0 1450,clip,width=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443, 483, 561, 655 and 865 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the SeaDAS tool (x) and the MoB-ELM algorithm (y). Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262RrsSeaDAS_MoB-ELM} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_MOB_D_R_R}
+      \put (5,5) {MOB-ELM}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/LC80160302013262LGN00_L2_SWIR_FranzAve_chlor_a_ACO_OC3def}
+      \put (5,5) {ACOLITE-SWIR}
+      \end{overpic}
+    \end{minipage}
+
+    \vspace{0.7cm}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_SEA5x5_R}
+      \put (5,5) {SEADAS-SWIR}
+      \end{overpic}
+    \end{minipage}
+    \hfill
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 40 0,clip,width=7.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_MUMM45}
+      \put (5,5) {MUMM}
+      \end{overpic}
+    \end{minipage}
+    
+
+    \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \vspace{0.5cm}
+      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar_CHL_0_100}
+      \put (35,16) {$C_a [mg/m^3]$}
+      \end{overpic}
+    \end{minipage}
+
+  \caption{$C_a.$ \label{fig:chlor_a} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite_MUMM.png}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite_SeaDAS.png}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_MUMM_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.48\linewidth}
+      \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS_MUMM.png}
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+    \centering
+      \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[d]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 1500,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_SeaDAS_MoB-ELM.png}
+      \end{overpic}
+  \end{minipage}    
+
+\vspace{.5cm}
+  \caption{$C_a$ comparison among all the four method analyzed in this work. \label{fig:13262Chlor} } 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.3\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTNS.png}
+      \put (20,60) {G) ONTNS} 
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTOS.png}
+      \put (20,14) {H) ONTOS}     
+      \end{overpic}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTEX.png}
+      \put (20,14) {F) ONTEX}   
+
+      \end{overpic}
+  \end{minipage}
+
+  \begin{minipage}[c]{0.3\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompRVRPL.png}
+      \put (20,14) {I) RVRPL}     
+
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGN.png}
+      \put (20,60) {D) LONGN}   
+
+      \end{overpic}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGS.png}
+      \put (20,60) {E) LONGS}
+      \end{overpic}
+  \end{minipage}
+
+   \begin{minipage}[c]{0.3\linewidth}
+      \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompCRANB.png}
+      \put (45,14) {C) CRANB}     
+
+      \end{overpic}  
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompBRADIN.png}
+      \put (45,14) {A) BRADIN}
+      \end{overpic}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.3\linewidth}
+    \centering
+      \begin{overpic}[trim=0 0 0 0,clip,width=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompBRADONT.png}
+      \put (45,14) {B) BRADONT}
+
+      \end{overpic}
+  \end{minipage}    
+
+% 
+  \caption{Comparison of $R_{rs}$ for the sites on the 90-19-2013 collection. \label{fig:13262RrsComp}} 
+\end{figure}
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{1.0\linewidth}
+    \centering
+      \begin{overpic}[trim=450 0 450 0,clip,width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/CHLmeavsret.png}
+      \put(17,60){\includegraphics[trim=10 80 0 0,clip,width=3.3cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/CHLmeavsretZOOM.png}}
+      \end{overpic}  
+  \end{minipage}
+  \caption{Comparison retrieved versus measured $R_{rs}$ for the sites on the 90-19-2013 collection. \label{fig:13262RrsMeaVSRet}} 
+\end{figure}
+% -----------------------------------------------------------
+%-------------
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \centering
+  \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/13262_NRME_CHL.png}
+  \caption{NRMSE for $C_a$.\label{fig:NRMSE130919} } 
+\end{figure}
+
 
 % ------------------------------
 \todo{Concluding Remarks}
