--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -162,6 +162,11 @@
 
 % Added 08-10-14 
 \usepackage{enumitem}
+
+% Added 07-28-15 
+\usepackage[percent]{overpic}
+\usepackage{morefloats} % for the error "Too many unprocessed floats"
+
 %******************************************************************************************************
 %******************************************************************************************************
 %******************************************************************************************************
