Figures from SPIE San Diego paper included

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -174,8 +174,8 @@
 
 \degreetitle{The Use of Landsat-8 for Monitoring of Fresh and Coastal Water}
 \degreeauthor{Javier A. Concha}
-\degreedate{October 7, 2014}
-% \degreedate{\today{}}
+% \degreedate{October 7, 2014}
+\degreedate{\today{}}
 \prevdegreeA{M.S. Rochester Institute of Technology, 2012}
 \advisor{Dr. John R. Schott}
 \memberA{Dr. Anthony Vodacek}
